--- a/about.html
+++ b/about.html
@@ -6,13 +6,13 @@ background: '/img/bg-about.jpg'
 ---
 
 
-        <p>My goal (since I was 10 years old) was to become an INVENTOR. I wanted to IMPROVE AND CREATE things that people use everyday so THEIR LIVES would be BETTER (and maybe I would get rich on the process. why not?).
+        <p class="p1"> My goal (since I was 10 years old) was to become an INVENTOR. I wanted to IMPROVE AND CREATE things that people use everyday so THEIR LIVES would be BETTER (and maybe I would get rich on the process. why not?).
           I could not move to another city to study mechanical engineering or industrial design so I got a BSc in chemistry.</p>
 
-        <p>When I was about to finish college there was a serious fire accident in a night club in Brazil and I kept wondering “ WHY DIDN'T SOMEONE CREATE A BETTER FIRE EXTINGUISHER YET? HOW OLD IS CURRENT DESIGN?” Then I had an idea (you can read about it on my physical concepts), wrote it down and started to search about it while I had to finish my studies.
+        <p class="p1"> When I was about to finish college there was a serious fire accident in a night club in Brazil and I kept wondering “ WHY DIDN'T SOMEONE CREATE A BETTER FIRE EXTINGUISHER YET? HOW OLD IS CURRENT DESIGN?” Then I had an idea (you can read about it on my physical concepts), wrote it down and started to search about it while I had to finish my studies.
           At some point I found out that some guys in Indonesia have had a similar idea and they already had a product. So I saved my notes and moved on.</p>
 
-        <p>Years later UX Design popped somehow in my life and I got really interested because UX Design impacts society as much as physical products design.
+        <p class="p1"> Years later UX Design popped somehow in my life and I got really interested because UX Design impacts society as much as physical products design.
           Here I am, creating my portfolio so I can get an opportunity to help changing the world. So the answer to "who is Renan?" is: A chemist who have always been a designer and sometimes inventor.</p>
 
-        <p>I'm also a guy who enjoys photography (landscape, street photography and macro), playing basketball and table-tennis, watching some track&field events, science fiction and documentaries, learning about other languages, culture and investiments. I also like traveling and reading about the lastests technologies.</p>
+        <p class="p1"> I'm also a guy who enjoys photography (landscape, street photography and macro), playing basketball and table-tennis, watching some track&field events, science fiction and documentaries, learning about other languages, culture and investiments. I also like traveling and reading about the lastests technologies.</p>
