--- a/about.html
+++ b/about.html
@@ -6,20 +6,22 @@ background: '/img/bg-about.jpg'
 ---
 
 <p class="p1"> My goal (since I was 10 years old) was to become an INVENTOR. I wanted to IMPROVE AND CREATE things that 
-          people use everyday so THEIR LIVES would be BETTER (and maybe I would get rich on the process. why not?).
+          people use everyday so THEIR LIVES would be BETTER (and maybe I would get rich on the process. why not?). But
           I could not move to another city to study mechanical engineering or industrial design so I got a BSc in chemistry.</p>
 
         <p class="p1"> When I was about to finish college there was a serious fire accident in a night club in Brazil and I kept 
           wondering “ WHY DIDN'T SOMEONE CREATE A BETTER FIRE EXTINGUISHER YET? HOW OLD IS CURRENT DESIGN?” Then I had an idea (my own
-           method for idea generation was similar to SCAMPER), I took some nots and kept doing my research while I also had to finish
-            my studies.
-          At some point I found out that some guys in Indonesia have had a similar idea and they already had a product called Elide
-           fire
-           ball. So I saved my notes and moved on.</p>
+           method for idea generation was similar to SCAMPER), I took some notes and kept doing my research while I also had to finish 
+                  my studies. </p>
+                  
+         <p class="p1"> At some point I found out that some guys in Indonesia have had a similar idea and they already had a product called Elide
+           fire ball. So I saved my notes and moved on.</p>
 
-        <p class="p1"> Somehow I don't rememeber, some years later I got to know about UX deisgn and I got really interested because it
-           impacts society as much as design of physical products.
-          Here I am looking for an opportunity to help changing the world. So the answer to "who is Renan?" is: A chemist who have 
+        <p class="p1"> Some months ago I got to know about UX design and I got really interested on it  because it impacts society 
+                  as much as design of physical products. I have started to study about it and here I am looking for an opportunity to 
+                  help changing the world. </p>
+<p class="p1"> So WHO IS RENAN? </p>
+<p class="p1"> - A chemist who have 
           always been a designer and sometimes inventor. Also a guy who enjoys photography (mostly landscape and street photography), 
           playing basketball and table-tennis, watching sports, science fiction and documentaries, learning about other languages, 
           culture and investiments. I also love traveling and reading about the lastests technologies.</p>
