--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ description:
 background: '/img/bg-about.jpg'
 ---
 
-<p class="p1"> My goal (since I was 10 years old) was to become an INVENTOR. I wanted to IMPROVE AND CREATE things that 
+<p class="p1"> The story starts when I was 10 years old, since this age my dream was to become an INVENTOR. I wanted to IMPROVE AND CREATE things that 
           people use everyday so THEIR LIVES would be BETTER (and maybe I would get rich on the process. why not?). But
           I could not move to another city to study mechanical engineering or industrial design so I got a BSc in chemistry.</p>
 
@@ -20,8 +20,9 @@ background: '/img/bg-about.jpg'
         <p class="p1"> Some months ago I got to know about UX design and I got really interested on it  because it impacts society 
                   as much as design of physical products. I have started to study about it and here I am looking for an opportunity to 
                   help changing the world. </p>
-<p class="p1"> So WHO IS RENAN? </p>
+<p class="p1"> WHO IS RENAN? </p>
 <p class="p1"> - A chemist who have 
-          always been a designer and sometimes inventor. Also a guy who enjoys photography (mostly landscape and street photography), 
+          always been a designer and sometimes inventor. Also a simple guy who enjoys photography (mostly landscape and street 
+          photography), 
           playing basketball and table-tennis, watching sports, science fiction and documentaries, learning about other languages, 
           culture and investiments. I also love traveling and reading about the lastests technologies.</p>
