Update and rename 2017-10-29-mirrorless-cameras.html to 2017-10-29-digital-cameras.html

--- a/_physical/2017-10-29-digital-cameras.html
+++ b/_physical/2017-10-29-digital-cameras.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Mirrorless cameras"
+title: "Digital cameras"
 subtitle: "breaking old design patterns"
 date: 2017-10-29 23:45:13 -0400
 background: '/img/posts/camera.png'
