--- a/contact.html
+++ b/contact.html
@@ -6,4 +6,8 @@ background: '/img/bg-contact.jpg'
 form: true
 ---
 
-<p> <h5> Reach me out sending me an email or via LinkedIn. </h5> </p>
+<h3> You can find me on WhatsApp or phone: </h3>
+
+<h5> +55 66 98422 7274 </h5>
+
+<h3> you can also reach me out via email or via LinkedIn. </h3>
