--- a/about.html
+++ b/about.html
@@ -5,24 +5,30 @@ description:
 background: '/img/bg-about.jpg'
 ---
 
-<p class="p1"> The story starts when I was 10 years old, since this age my dream was to become an INVENTOR. I wanted to IMPROVE AND CREATE things that 
-          people use everyday so THEIR LIVES would be BETTER (and maybe I would get rich on the process. why not?). But
-          I could not move to another city to study mechanical engineering or industrial design so I got a BSc in chemistry.</p>
+<p class="p1"> Since I was 10 years old I had dreamed about to become an INVENTOR. I wanted to IMPROVE AND CREATE things that 
+          people use everyday so THEIR LIVES would be BETTER (and maybe I would get rich on the process. why not?). But I ended up 
+          with a BSc in chemistry.</p>
 
-        <p class="p1"> When I was about to finish college there was a serious fire accident in a night club in Brazil and I kept 
-          wondering “ WHY DIDN'T SOMEONE CREATE A BETTER FIRE EXTINGUISHER YET? HOW OLD IS CURRENT DESIGN?” Then I had an idea (my own
-           method for idea generation was similar to SCAMPER), I took some notes and kept doing my research while I also had to finish 
-                  my studies. </p>
+        <p class="p1"> In my last year at college there was a serious fire accident in a night club in Brazil and I kept 
+                  wondering: </p>
+<br>
+<span class="caption text-muted"> “ WHY DIDN'T SOMEONE CREATE A BETTER FIRE EXTINGUISHER YET? HOW OLD IS CURRENT DESIGN?” </span>
+<br>
+
+<p class="p1"> I kept thinking so I decided to approach the problem with a method. I started from what makes a fire in order to 
+          understand how I could put an end to it. So I found some ways but I picked the safest and less complicated one. But I had 
+          to finish my studies so I put my notes aside for a while. </p>
                   
-         <p class="p1"> At some point I found out that some guys in Indonesia have had a similar idea and they already had a product called Elide
-           fire ball. So I saved my notes and moved on.</p>
+         <p class="p1"> At some point I found out that some guys in Indonesia have had a similar idea couple years before and they 
+                   already had a product called Elide fire ball so I moved on.</p>
 
-        <p class="p1"> Some months ago I got to know about UX design and I got really interested on it  because it impacts society 
-                  as much as design of physical products. I have started to study about it and here I am looking for an opportunity to 
-                  help changing the world. </p>
-<p class="p1"> WHO IS RENAN? </p>
+        <p class="p1"> Some months ago I heard about UX design and started to study about it. Now here I am looking for an 
+                  opportunity to help change the world. </p>
+<br>
+<p> After all, <b> WHO IS RENAN? </b> </p>
+<br>
+
 <p class="p1"> - A chemist who have 
-          always been a designer and sometimes inventor. Also a simple guy who enjoys photography (mostly landscape and street 
-          photography), 
-          playing basketball and table-tennis, watching sports, science fiction and documentaries, learning about other languages, 
-          culture and investiments. I also love traveling and reading about the lastests technologies.</p>
+          always been a designer and sometimes an inventor. Despite that I'm also a simple guy who enjoys photography (mostly landscape 
+          and street photography), playing basketball and table-tennis, watching sports, science fiction and documentaries, learning 
+          about other languages, culture and investiments. I also love traveling and reading about the lastests technologies.</p>
