--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,4 @@ background: '/img/bg-contact.jpg'
 form: true
 ---
 
-<h3 style="text-align:center"> You can find me on WhatsApp or phone: </h3>
-
-<h5 style="text-align:center"> +55 66 98422 7274 </h5>
-
-<br>
-
-<h5 style="text-align:center"> You can also reach me out via email or via LinkedIn, by clicking on the icons below. </h5>
+<h3 style="text-align:center"> You can reach me out via email, Instagram or LinkedIn, by clicking on the icons below. Don't be shy!  </h3>
