--- a/about.html
+++ b/about.html
@@ -2,33 +2,65 @@
 layout: page
 title: Who is Renan?
 description:
-background: '/img/bg-about.jpg'
+background: '/img/bg-about.png'
 ---
 
-<p class="p1"> Since I was 10 years old I had dreamed about to become an INVENTOR. I wanted to IMPROVE AND CREATE things that 
-          people use everyday so THEIR LIVES would be BETTER (and maybe I would get rich on the process. why not?). But I ended up 
+<p class="p1"> Since I was 10 years old I had dreamed about to become an INVENTOR. I wanted to IMPROVE AND CREATE things that
+          people use everyday so THEIR LIVES would be BETTER (and maybe I would get rich on the process. why not?). But I ended up
           with a BSc in chemistry.</p>
 
-        <p class="p1"> In my last year at college there was a serious fire accident in a night club in Brazil and I kept 
-                  wondering: </p>
 <br>
-<span class="caption text-muted"> “ WHY DIDN'T SOMEONE CREATE A BETTER FIRE EXTINGUISHER YET? HOW OLD IS CURRENT DESIGN?” </span>
+          <div class="col-lg-10 col-md-10 mx-auto">
+          <p class="p1">
+              <img class="img-fluid" src="/renancoelho/img/experiment.png" alt=""> </p>
+
+              </div>
+
+              <p class="p2">
+              <span class="caption text-muted"> Chemistry PH experiment.</span> </p>
+
 <br>
 
-<p class="p1"> I kept thinking so I decided to approach the problem with a method. I started from what makes a fire in order to 
-          understand how I could put an end to it. So I found some ways but I picked the safest and less complicated one. But I had 
-          to finish my studies so I put my notes aside for a while. </p>
-                  
-         <p class="p1"> At some point I found out that some guys in Indonesia have had a similar idea couple years before and they 
-                   already had a product called Elide fire ball so I moved on.</p>
+        <p class="p1"> In my last year at college there was a serious fire accident in a night club in Brazil, I was not
+          there but I kept wondering: </p>
+<br>
+<span class="caption text-muted"> “ WHY DIDN'T SOMEONE CREATE A BETTER FIRE EXTINGUISHER YET? ”  </span>
+<br>
+<span class="caption text-muted">  “ HOW OLD IS CURRENT DESIGN? ” </span>
+<br>
 
-        <p class="p1"> Some months ago I heard about UX design and started to study about it. Now here I am looking for an 
+<p class="p1"> I kept thinking so I decided to approach the problem with a method. I started from what makes a fire in
+  order to understand how I could come up with a way to put an end to it. So I found some ways but I picked the safest
+  and less complicated one.</p>
+  <p> During those days I had to finish my studies so I put my notes aside for a while. </p>
+
+          <br>
+                    <div class="col-lg-10 col-md-10 mx-auto">
+                    <p class="p1">
+                        <img class="img-fluid" src="/renancoelho/img/drawing-pic.png" alt=""> </p>
+
+                        </div>
+
+                        <p class="p2">
+                        <span class="caption text-muted"> Fire extinguisher raw sketches.</span> </p>
+
+          <br>
+
+         <p class="p1"> At some point I found out that some guys in Indonesia have had a similar idea couple years before and they
+                   already had a product called Elide fire ball so I moved on from that project.</p>
+
+        <p class="p1"> Around mid 2019 I heard about UX design and started to study about it. Now here I am looking for an
                   opportunity to help change the world. </p>
 <br>
-<p> After all, <b> WHO IS RENAN? </b> </p>
+<p> Back to the question, <b> WHO IS RENAN? </b> </p>
 <br>
 
-<p class="p1"> - A chemist who have 
-          always been a designer and sometimes an inventor. Despite that I'm also a simple guy who enjoys photography (mostly landscape 
-          and street photography), playing basketball and table-tennis, watching sports, science fiction and documentaries, learning 
-          about other languages, culture and investiments. I also love traveling and reading about the lastests technologies.</p>
+<p> - A chemist, a <b> problem solver </b> and sometimes an inventor. </p>
+
+<br>
+<br>
+
+<p class="p2"> OTHER INTERESTS:</p>
+
+<p> Riding a motorcycle  -  Photography  -  Basketball  -  Table-tennis  -  Watching sports, science fiction
+  and documentaries  -  Learning about languages, culture, investiments and technology</p>
