--- a/about.html
+++ b/about.html
@@ -52,15 +52,14 @@ background: '/img/bg-about.png'
         <p class="p1"> Around mid 2019 I heard about UX design and started to study about it. Now here I am looking for an
                   opportunity to help change the world. </p>
 <br>
-<p> Back to the question, <b> WHO IS RENAN? </b> </p>
+<p> Back to the question, <b>WHO IS RENAN?</b> </p>
 <br>
 
-<p> - A chemist, a <b> problem solver </b> and sometimes an inventor. </p>
+<p> - A chemist, a <b>problem solver</b> and sometimes an inventor. </p>
 
 <br>
-<br>
 
-<p class="p2"> OTHER INTERESTS:</p>
+<p class="p2" style="text-align:center"> OTHER INTERESTS:</p>
 
-<p> Riding a motorcycle  -  Photography  -  Basketball  -  Table-tennis  -  Watching sports, science fiction
+<p style="text-align:center"> Riding a motorcycle  -  Photography  -  Basketball  -  Table-tennis  -  Watching sports, science fiction
   and documentaries  -  Learning about languages, culture, investiments and technology</p>
