--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ background: '/img/bg-about.png'
               </div>
 
               <p class="p2">
-              <span class="caption text-muted"> Chemistry PH experiment.</span> </p>
+              <span class="caption text-muted"> Chemistry experiment.</span> </p>
 
 <br>
 
@@ -52,14 +52,12 @@ background: '/img/bg-about.png'
         <p class="p1"> Around mid 2019 I heard about UX design and started to study about it. Now here I am looking for an
                   opportunity to help change the world. </p>
 <br>
-<p> Back to the question, <b>WHO IS RENAN?</b> </p>
+<h6 style="text-align:center"> Back to the question, WHO IS RENAN? </h6>
+
+<p style="text-align:center"> - A chemist, a <b>problem solver</b> and sometimes an inventor. </p>
+
 <br>
-
-<p> - A chemist, a <b>problem solver</b> and sometimes an inventor. </p>
-
-<br>
-
 <p class="p2" style="text-align:center"> OTHER INTERESTS:</p>
 
-<p style="text-align:center"> Riding a motorcycle  -  Photography  -  Basketball  -  Table-tennis  -  Watching sports, science fiction
-  and documentaries  -  Learning about languages, culture, investiments and technology</p>
+<p style="text-align:center"> Riding a motorcycle  -  Photography  -  Basketball  -  Table-tennis  -  Sports  -
+  Science fiction  -  Documentaries  -  Languages  -  Culture  -  Investiments  -  Technology</p>
