--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@ background: '/img/bg-about.png'
 
 <br>
 
-        <p class="p1"> In my last year at college there was a serious fire accident in a night club in Brazil, I was not
+        <p> In my last year at college there was a serious fire accident in a night club in Brazil, I was not
           there but I kept wondering: </p>
 <br>
 <span class="caption text-muted"> “ WHY DIDN'T SOMEONE CREATE A BETTER FIRE EXTINGUISHER YET? ”  </span>
@@ -29,7 +29,7 @@ background: '/img/bg-about.png'
 <span class="caption text-muted">  “ HOW OLD IS CURRENT DESIGN? ” </span>
 <br>
 
-<p class="p1"> I kept thinking so I decided to approach the problem with a method. I started from what makes a fire in
+<p> I kept thinking so I decided to approach the problem with a method. I started from what makes a fire in
   order to understand how I could come up with a way to put an end to it. So I found some ways but I picked the safest
   and less complicated one.</p>
   <p> During those days I had to finish my studies so I put my notes aside for a while. </p>
@@ -46,18 +46,18 @@ background: '/img/bg-about.png'
 
           <br>
 
-         <p class="p1"> At some point I found out that some guys in Indonesia have had a similar idea couple years before and they
+         <p> At some point I found out that some guys in Indonesia have had a similar idea couple years before and they
                    already had a product called Elide fire ball so I moved on from that project.</p>
 
-        <p class="p1"> Around mid 2019 I heard about UX design and started to study about it. Now here I am looking for an
+        <p> Around mid 2019 I heard about UX design and started to study about it. Now here I am looking for an
                   opportunity to help change the world. </p>
 <br>
 <h6 style="text-align:center"> Back to the question, WHO IS RENAN? </h6>
 
 <p style="text-align:center"> - A chemist, a <b>problem solver</b> and sometimes an inventor. </p>
-
 <br>
-<p class="p2" style="text-align:center"> OTHER INTERESTS:</p>
+<br>
+<p style="text-align:center"> OTHER INTERESTS:</p>
 
 <p style="text-align:center"> Riding a motorcycle  -  Photography  -  Basketball  -  Table-tennis  -  Sports  -
   Science fiction  -  Documentaries  -  Languages  -  Culture  -  Investiments  -  Technology</p>
