--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ description:
 background: '/img/bg-about.png'
 ---
 
-<p class="p1"> Since I was 10 years old I had dreamed about to become an INVENTOR. I wanted to IMPROVE AND CREATE things that
+<p class="p1"> I had dreamed about to become an INVENTOR since I was 8 or 9 years old. I wanted to IMPROVE AND CREATE things that
           people use everyday so THEIR LIVES would be BETTER (and maybe I would get rich on the process. why not?). But I ended up
           with a BSc in chemistry.</p>
 
@@ -24,15 +24,14 @@ background: '/img/bg-about.png'
         <p> In my last year at college there was a serious fire accident in a night club in Brazil, I was not
           there but I kept wondering: </p>
 <br>
-<span class="caption text-muted"> “ WHY DIDN'T SOMEONE CREATE A BETTER FIRE EXTINGUISHER YET? ”  </span>
+          <h5 style="text-align:center"> “ WHY DIDN'T SOMEONE CREATE A BETTER FIRE EXTINGUISHER YET? ”  </h5>
 <br>
-<span class="caption text-muted">  “ HOW OLD IS CURRENT DESIGN? ” </span>
+          <h5 style="text-align:center">  “ HOW OLD IS CURRENT DESIGN? ” <h5>
 <br>
 
-<p> I kept thinking so I decided to approach the problem with a method. I started from what makes a fire in
-  order to understand how I could come up with a way to put an end to it. So I found some ways but I picked the safest
-  and less complicated one.</p>
-  <p> During those days I had to finish my studies so I put my notes aside for a while. </p>
+<p> I started from what makes a fire in order to understand how I could come up with a way to put an end to it. 
+          I found few ways but I picked the safest and less complicated one.</p>
+  <p> During those days I had to finish my studies so I put my messy notes/sketches aside for a while. </p>
 
           <br>
                     <div class="col-lg-10 col-md-10 mx-auto">
@@ -46,13 +45,13 @@ background: '/img/bg-about.png'
 
           <br>
 
-         <p> At some point I found out that some guys in Indonesia have had a similar idea couple years before and they
+         <p> At some point I found out that some guys in Indonesia had a similar idea couple years before and they
                    already had a product called Elide fire ball so I moved on from that project.</p>
 
         <p> Around mid 2019 I heard about UX design and started to study about it. Now here I am looking for an
-                  opportunity to help change the world. </p>
+                  opportunity to help improving things. </p>
 <br>
-<h6 style="text-align:center"> Back to the question, WHO IS RENAN? </h6>
+<h5 style="text-align:center"> Back to the question, WHO IS RENAN? </h5>
 
 <p style="text-align:center"> - A chemist, a <b>problem solver</b> and sometimes an inventor. </p>
 <br>
