--- a/about.html
+++ b/about.html
@@ -26,10 +26,10 @@ background: '/img/bg-about.png'
 <br>
           <h5 style="text-align:center"> “ WHY DIDN'T SOMEONE CREATE A BETTER FIRE EXTINGUISHER YET? ”  </h5>
 <br>
-          <h5 style="text-align:center">  “ HOW OLD IS CURRENT DESIGN? ” <h5>
+          <h5 style="text-align:center">  “ HOW OLD IS CURRENT DESIGN? ” </h5>
 <br>
 
-<p> I started from what makes a fire in order to understand how I could come up with a way to put an end to it. 
+<p> I started from what makes a fire in order to understand how I could come up with a way to put an end to it.
           I found few ways but I picked the safest and less complicated one.</p>
   <p> During those days I had to finish my studies so I put my messy notes/sketches aside for a while. </p>
 
