--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@ background: '/img/bg-about.png'
         <p> Around mid 2019 I heard about UX design and started to study about it. Now here I am looking for an
                   opportunity to help improving things. </p>
 <br>
-<h5 style="text-align:center"> Back to the question, WHO IS RENAN? </h5>
+<h5 ALIGN:center"> Back to the question, WHO IS RENAN? </h5>
 
 <p style="text-align:center"> - A chemist, a <b>problem solver</b> and sometimes an inventor. </p>
 <br>
