--- a/about.html
+++ b/about.html
@@ -24,14 +24,13 @@ background: '/img/bg-about.png'
         <p> In my last year at college there was a serious fire accident in a night club in Brazil, I was not
           there but I kept wondering: </p>
 <br>
-          <h5 ALIGN:center"> “ WHY DIDN'T SOMEONE CREATE A BETTER FIRE EXTINGUISHER YET? ”  </h5>
+          <h5 style="text-align:center"> “ WHY DIDN'T SOMEONE CREATE A BETTER FIRE EXTINGUISHER YET? ”  </h5>
 <br>
-          <h5 ALIGN:center">  “ HOW OLD IS CURRENT DESIGN? ”  </h5>
+          <h5 style="text-align:center">  “ HOW OLD IS CURRENT DESIGN? ” </h5>
 <br>
 
 <p> I started from what makes a fire in order to understand how I could come up with a way to put an end to it.
           I found few ways but I picked the safest and less complicated one.</p>
-
   <p> During those days I had to finish my studies so I put my messy notes/sketches aside for a while. </p>
 
           <br>
@@ -52,7 +51,7 @@ background: '/img/bg-about.png'
         <p> Around mid 2019 I heard about UX design and started to study about it. Now here I am looking for an
                   opportunity to help improving things. </p>
 <br>
-<h5 ALIGN:center"> Back to the question, WHO IS RENAN? </h5>
+<h5 style="text-align:center"> Back to the question, WHO IS RENAN? </h5>
 
 <p style="text-align:center"> - A chemist, a <b>problem solver</b> and sometimes an inventor. </p>
 <br>
